k3s/whoami-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 2 
  template: 
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  type: NodePort
  #type: LoadBalancer
  #loadBalancerIP: 192.168.0.10
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
