k3s/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
# - host: mvcapp.cdecl.net     
  - http:
      paths:               
      - path: /
        pathType: ImplementationSpecific
        backend:           
          service:
            name: whoami
            port: 
              number: 80
